<resources>
    <string name="app_name">Education Notes</string>
    <string name="todo">TODO</string>
    <string name="bca">BCA</string>
    <string name="icon_home">Go To Home</string>
    <string name="log_in">Log In</string>
    <string name="register">Register For New User</string>
    <string name="register_btn">Register</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already">Already Have An Account?</string>
    <string name="enroll_no">Enrollment Number</string>
    <string name="course_name">Course Name</string>
    <string name="course_full_name">Course Full Name</string>
    <string name="course_pic">Course Picture</string>
    <string name="dob">Enter Your Date Of Birth</string>
    <string name="confirm_Enrollment">Confirm Enrollment</string>
    <string name="question_papers">Question Papers</string>
    <string name="e_books">E - Books</string>
    <string name="text_notes">Text Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">Communicative English</string>
    <string name="maths">Basic Mathematics</string>
    <string name="fundamentals">Computer Fundamentals</string>
    <string name="c">Introduction To C Language</string>
</resources>