<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EBooksFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top|center"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textAlignment="center"
                android:textSize="35sp"
                android:padding="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/e_english"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maths"
                android:textAlignment="center"
                android:textSize="35sp"
                android:padding="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/e_maths"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fundamentals"
                android:textAlignment="center"
                android:textSize="35sp"
                android:padding="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/e_fundamental"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textAlignment="center"
                android:textSize="35sp"
                android:padding="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/e_c"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>